--- a/src/app/modules/rp-table/table-body/table-body.component.html
+++ b/src/app/modules/rp-table/table-body/table-body.component.html
@@ -4,9 +4,9 @@
   </mat-form-field>
 </div>
 <div class="example-container mat-elevation-z8" >
-  <mat-table #table [dataSource]="dataSource" >
+  <mat-table #table [dataSource]="dataSource" matSort>
 
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column.propertyName">
       <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column.columnDef }}</mat-header-cell>
 
       <mat-cell *matCellDef="let row" [satPopoverAnchorFor]="p" (click)="p.open()">
@@ -20,7 +20,7 @@
           <app-inline-edit *ngIf="column.propertyName!='name'" [value]="column.cell(row)"></app-inline-edit>
           <app-select *ngIf="column.propertyName=='name'" [value]="column.cell(row)"></app-select>
         </sat-popover>
-      </mat-cell>
+      </mat-cell> 
 
     </ng-container>
 
@@ -28,4 +28,4 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-</div>
+</div> 
