RP:0001:Added styles to improve UX wile changing values

--- a/src/app/modules/rp-table/cell-types/inline-edit/inline-edit.component.html
+++ b/src/app/modules/rp-table/cell-types/inline-edit/inline-edit.component.html
@@ -6,7 +6,7 @@
         <!-- <mat-hint align="end">{{cellValue?.length || 0}}/140</mat-hint> -->
       </mat-form-field>
     </div>
-    <div class="input-area">
+    <!-- <div class="input-area">
       <button mat-icon-button type="submit" color="primary">
         <mat-icon>done</mat-icon>
       </button>
@@ -15,6 +15,6 @@
       <button mat-icon-button type="button" color="primary" (click)="onCancel()">
         <mat-icon>clear</mat-icon>
       </button>
-    </div>
+    </div> -->
   </div>
 </form>
