--- a/src/app/modules/rp-table/table-body/table-body.component.css
+++ b/src/app/modules/rp-table/table-body/table-body.component.css
@@ -8,3 +8,20 @@
   overflow: auto;
   max-height: 500px;
 }
+
+.mat-row {
+  display: flex;
+  border-bottom: 1px solid #ccc;
+  align-items: center;
+  height: 32px;
+  min-height: 36px; 
+  padding: 0 8px;
+}
+.mat-cell {
+  display: flex;
+  border-left: 1px solid #ccc;
+  align-items: center;
+  height: 32px;
+  min-height: 36px; 
+  padding: 0 8px;
+} 
