--- a/src/app/modules/rp-table/table-body/table-body.component.css
+++ b/src/app/modules/rp-table/table-body/table-body.component.css
@@ -1,8 +1,3 @@
-.example-container {
-  display: flex;
-  flex-direction: column;
-  min-width: 300px;
-}
 
 .mat-table {
   overflow: auto;
@@ -17,6 +12,7 @@
   min-height: 36px; 
   padding: 0 8px;
 }
+
 .mat-cell {
   display: flex;
   border-left: 1px solid #ccc;
@@ -25,3 +21,14 @@
   min-height: 36px; 
   padding: 0 8px;
 } 
+
+.mat-header-cell {
+  padding: 0 8px;
+}
+
+.mat-column-select {
+  overflow: visible;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 20px;
+}
