--- a/src/app/modules/rp-table/table-body/table-body.component.css
+++ b/src/app/modules/rp-table/table-body/table-body.component.css
@@ -24,11 +24,16 @@
 
 .mat-header-cell {
   padding: 0 8px;
+} 
+
+.mat-header-row{
+  padding: 10px;
+  min-height: 36px;
 }
 
 .mat-column-select {
   overflow: visible;
   flex-grow: 0;
   flex-shrink: 0;
-  flex-basis: 20px;
+  flex-basis: 10%;
 }
