RP:0004:Table is fed data externally via input

--- a/src/app/modules/rp-table/rp-table.component.html
+++ b/src/app/modules/rp-table/rp-table.component.html
@@ -1,3 +1,3 @@
 <app-table-title></app-table-title>
-<app-table-body></app-table-body>
+<app-table-body [data]="tableData"></app-table-body>
 <app-table-footer></app-table-footer>
