RP:0005:Table dynamic capabilities improved

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-rp-table [data] = "ELEMENT_DATA" ></app-rp-table>
+<app-rp-table [data] = "ELEMENT_DATA" [columns] = "columns" [configs]="tableConfigs" ></app-rp-table>
 
