--- a/src/app/modules/rp-table/cell-types/select/select.component.html
+++ b/src/app/modules/rp-table/cell-types/select/select.component.html
@@ -4,7 +4,7 @@
       <mat-form-field>
         <mat-select [(value)]="cellValue" placeholder= "Select" (selectionChange)="onSubmit()">
           <mat-option value="None">None</mat-option>
-          <mat-option *ngFor="let state of states" value="{{state}}">{{state}}</mat-option>
+          <mat-option *ngFor="let selection of selections" value="{{selection}}">{{selection}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
