RP:0009:reactive forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-form-body></app-form-body>
+<app-reactive-form-body></app-reactive-form-body>
+<app-rp-table [data]="ELEMENT_DATA" [columns]="columns" [configs]="tableConfigs"></app-rp-table>
 
